fix: center align content in flip clock unit component

--- a/src/components/flip-clock/components/flip-clock-unit/flip-clock-unit.scss
+++ b/src/components/flip-clock/components/flip-clock-unit/flip-clock-unit.scss
@@ -16,6 +16,7 @@
     box-sizing: border-box;
     line-height: 1;
     width: 100%;
+    justify-content: center;
   }
 
   .current {
